assets/stylesheets/partials/resetter.css
:root {
  --font-family: 'IBM Plex Sans', 'Open Sans', 'Helvetica Neue', sans-serif;
  --background-color: #f8f8f8;
  --foreground-color: #333;
  --lightest-color: #fff;
  --border-color: #d7d7d7;
  --button-background-color: #444;
  --button-foreground-color: #f8f8f8;
  --button-hover-background-color: #222;
}

html, body {
  margin: 0;
  padding: 0;
  font-family: var(--font-family);
  color: var(--foreground-color);
  background-color: var(--background-color);
  font-size: 16px;
}

body {
  padding-bottom: 40px;
}

a {
  color: #0366d6 !important;
  text-decoration: none;

  &:hover,
  &:focus,
  &:active {
    text-decoration: underline;
  }
}

.dashboard {
  display: flex;
}

.link {
  background-color: transparent;
  border: 0;
  color: inherit;

  &:hover,
  &:focus,
  &:active {
    text-decoration: underline;
    cursor: pointer;
  }
}

/* Utilities */

.text-center {
  text-align: center;
}

.subtitle {
  color: #777;
  font-weight: bold;
}

/* Rows */

.row-70 {
  width: 50%;
  margin: 0 25%;
}

@media only screen and (max-width: 768px) {
  .row-70 {
    width: 100%;
    margin: 0;
  }
}

/* Container */

.container.is-fixed {
  width: 70%;
  margin: 0 15%;
  display: flex;
}

@media only screen and (max-width: 960px) {
  .container.is-fixed {
    width: 90%;
    margin: 0 5%;
    flex-wrap: wrap;
    justify-content: center;

    & .profile-header .is-large {
      text-align: center;
    }
  }
}

.btn {
  background-color: var(--button-background-color);
  color: var(--button-foreground-color);
  border: 1px solid transparent;
  font-weight: bold;
  text-transform: uppercase;
  border-radius: 3px;
  border-radius: 200px;
  padding: 10px 20px;
  transition: 0.3s ease-in background-color;
  cursor: pointer;

  &:hover,
  &:focus,
  &:active {
    background-color: var(--button-hover-background-color);
    transition: 0.3s ease-out background-color;
  }
}

.hidden {
  display: none !important;
}

